Add DingTalk & WeCom channel support
Introduce DingTalk Stream and WeCom channel implementations and docs. Adds new channel source files (dingtalk.rs, dingtalk_api.rs, dingtalk_stream.rs, wecom.rs, wecom_crypto.rs), example log and quickstart script, and setup guides (docs/dingtalk-setup.md, docs/wecom-setup.md). Update channel module, configuration schema and onboarding wizard to expose the new channels and update providers accordingly. Update Cargo.toml to declare new dependencies and refresh Cargo.lock. Also ignore *.log files via .gitignore.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,14 @@ uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }
 # Authenticated encryption (AEAD) for secret store
 chacha20poly1305 = "0.10"
 
+# AES-CBC for WeCom message encryption
+aes = "0.8"
+cbc = "0.1"
+rand = "0.8"
+
+# DingTalk Stream mode
+dingtalk-stream-sdk-rust = "0.1.0"
+
 # HMAC for webhook signature verification
 hmac = "0.12"
 sha2 = "0.10"
